# civil_service_project

./: .gitignore  README.md
backend/: api_response.py  docker-compose.yml  manage.py  my_exceptions.py  requirements.txt  script.py
backend/address/: constants.py  models.py  serializers.py  urls.py  views.py
backend/job/: constants.py  models.py  serializers.py  urls.py  views.py
backend/material_stock/: apps.py  constants.py  models.py  serializers.py  urls.py  views.py
backend/my_civil_service_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/profession/: apps.py  constants.py  models.py  my_logger.py  serializers.py  urls.py  views.py
backend/shop/: constants.py  models.py  serializers.py  urls.py  (+1 more)
frontend/: .gitignore
my_civil_service_project/: Dockerfile  api_response.py  entrypoint.sh  manage.py  my_exceptions.py  pyproject.toml  script.py
my_civil_service_project/address/: constants.py  models.py  serializers.py  urls.py  views.py
my_civil_service_project/job/: constants.py  models.py  serializers.py  urls.py  views.py
my_civil_service_project/material_stock/: apps.py  constants.py  models.py  serializers.py  urls.py  views.py
my_civil_service_project/my_civil_service_project/: asgi.py  settings.py  urls.py  wsgi.py
my_civil_service_project/profession/: constants.py  models.py  serializers.py  urls.py  views.py
my_civil_service_project/shop/: constants.py  models.py  serializers.py  urls.py  views.py
my_civil_service_project/user/: authentication.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+29 files in other folders)
